# TrabalhoCG

./: entrega 1.rar  entrega 2.rar  entrega 3.rar  matrizes.cpp  matrizes.h
entrega 1/engine/: CMakeLists.txt  main.cpp
entrega 1/generator/: main.cpp
entrega 2/engine/: CMakeLists.txt  classes.cpp  classes.h  main.cpp
entrega 2/generator/: CMakeLists.txt
entrega 3/engine/: CMakeLists.txt  classes.h  main.cpp  matrizes.cpp  matrizes.h
entrega 3/engine/classes/: Group.cpp  Point.cpp  Transformation.cpp  catmull.cpp  matrizes.cpp
entrega 3/engine/headers/: Group.h  Point.h  Transformation.h  catmull.h
entrega 3/engine/tinyxml2-master/: tinyxml2.h
entrega 3/generator/: CMakeLists.txt  bezier.cpp  bezier.h  main.cpp
entrega 3/generator/modelos/: bezier.cpp  box.cpp  cone.cpp  modelos.h  plane.cpp  sphere.cpp
entrega 4/engine/: CMakeLists.txt  main.cpp
entrega 4/engine/classes/: Group.cpp  Point.cpp  Transformation.cpp  catmull.cpp
entrega 4/engine/headers/: Group.h  Point.h  Transformation.h  catmull.h
entrega 4/generator/: CMakeLists.txt  main.cpp
entrega 4/generator/modelos/: boxInverted.cpp  cone.cpp  modelos.h  plane.cpp  sphere.cpp
